// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookIntegrationSetup should render an integration for: account eligible to IG DM and has the feature (Render an enabled IG DM setting) 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/facebook"
          >
            Facebook
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Facebook Pages setup
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      Facebook Pages setup
    </h1>
    <p>
      One last step: choose the pages you want to manage with Gorgias.
      <br />
      If you just wanted to re-activate your Facebook integration or update your permissions: it's done, you can leave this page.
    </p>
    <form
      class=""
    >
      <div
        class="mb-4"
      >
        <p
          class="font-weight-medium"
        >
          We found 
          1
           pages associated with your account. Please activate the pages you want to use with Gorgias:
        </p>
        <div
          class="mb-2"
        >
          <div
            class="page"
          >
            <div
              class="d-flex flex-wrap flex-md-nowrap"
            >
              <div
                class="mr-auto"
              >
                <div>
                  <img
                    alt="facebook logo"
                    class="image rounded mr-3 mb-2 mb-md-0 icon"
                    src="https://gorgias.io/page-image-link.png"
                  />
                  <div
                    class="details mr-3 text-faded"
                  >
                    <h3
                      class="name mr-3"
                    >
                      My page
                    </h3>
                    <span
                      class="mr-3"
                    >
                      [
                      Moderator
                      ]
                    </span>
                    <span>
                      A page about stuff
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <label
                  aria-checked="false"
                  class="ui-label-label-3864 ui-togglefield-label-52f1"
                  role="switch"
                >
                  <input
                    class="ui-togglefield-input-52f1"
                    disabled=""
                    type="checkbox"
                  />
                  <div
                    class="ui-togglefield-slider-52f1"
                  />
                  <div />
                </label>
              </div>
            </div>
            <div
              class="settings"
            >
              <p
                class="font-weight-medium"
              >
                Choose the Facebook channels you want to use to communicate with your customers:
              </p>
              <div
                class="d-md-flex"
              >
                <div
                  class="mr-5 form-group"
                >
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.messenger_enabled"
                    >
                      <input
                        class="input"
                        id="1.messenger_enabled"
                        name="1.messenger_enabled"
                        type="checkbox"
                      />
                      Enable Messenger
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.posts_enabled"
                    >
                      <input
                        class="input"
                        id="1.posts_enabled"
                        name="1.posts_enabled"
                        type="checkbox"
                      />
                      Enable Facebook posts, comments and ads comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.recommendations_enabled"
                    >
                      <input
                        class="input"
                        id="1.recommendations_enabled"
                        name="1.recommendations_enabled"
                        type="checkbox"
                      />
                      Enable Facebook recommendations
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.mentions_enabled"
                        name="1.mentions_enabled"
                        type="checkbox"
                      />
                      Enable Facebook mentions
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_comments_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_comments_enabled"
                        name="1.instagram_comments_enabled"
                        type="checkbox"
                      />
                      Enable Instagram comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_mentions_enabled"
                        name="1.instagram_mentions_enabled"
                        type="checkbox"
                      />
                      Enable Instagram mentions
                    </label>
                  </div>
                  <table>
                    <tbody>
                      <tr>
                        <td
                          class="pl-0"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="ui-label-label-3864 label"
                              for="1.instagram_direct_message_enabled"
                            >
                              <input
                                class="input"
                                id="1.instagram_direct_message_enabled"
                                name="1.instagram_direct_message_enabled"
                                type="checkbox"
                              />
                              <div
                                id="instagram_direct_message-1"
                              >
                                <span>
                                  Enable Instagram direct messages
                                </span>
                              </div>
                            </label>
                          </div>
                        </td>
                        <td
                          class="pl-0"
                        />
                      </tr>
                    </tbody>
                  </table>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_ads_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_ads_enabled"
                        name="1.instagram_ads_enabled"
                        type="checkbox"
                      />
                      Enable Instagram ads
                    </label>
                  </div>
                </div>
              </div>
              <div>
                <p
                  class="font-weight-medium"
                >
                  Import your Facebook data:
                </p>
                <div
                  class="d-md-flex"
                >
                  <div
                    class="mr-5 form-group"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="ui-label-label-3864 label"
                        for="1.import_history_enabled"
                      >
                        <input
                          class="input"
                          id="1.import_history_enabled"
                          name="1.import_history_enabled"
                          type="checkbox"
                        />
                        Import 30 days of history (posts and comments) as closed tickets
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          aria-disabled="true"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            Save changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`FacebookIntegrationSetup should render an integration for: account not eligible to IG DM and has the feature (Render a disabled IG DM setting with a warning) 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/facebook"
          >
            Facebook
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Facebook Pages setup
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      Facebook Pages setup
    </h1>
    <p>
      One last step: choose the pages you want to manage with Gorgias.
      <br />
      If you just wanted to re-activate your Facebook integration or update your permissions: it's done, you can leave this page.
    </p>
    <form
      class=""
    >
      <div
        class="mb-4"
      >
        <p
          class="font-weight-medium"
        >
          We found 
          1
           pages associated with your account. Please activate the pages you want to use with Gorgias:
        </p>
        <div
          class="mb-2"
        >
          <div
            class="page"
          >
            <div
              class="d-flex flex-wrap flex-md-nowrap"
            >
              <div
                class="mr-auto"
              >
                <div>
                  <img
                    alt="facebook logo"
                    class="image rounded mr-3 mb-2 mb-md-0 icon"
                    src="https://gorgias.io/page-image-link.png"
                  />
                  <div
                    class="details mr-3 text-faded"
                  >
                    <h3
                      class="name mr-3"
                    >
                      My page
                    </h3>
                    <span
                      class="mr-3"
                    >
                      [
                      Moderator
                      ]
                    </span>
                    <span>
                      A page about stuff
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <label
                  aria-checked="false"
                  class="ui-label-label-3864 ui-togglefield-label-52f1"
                  role="switch"
                >
                  <input
                    class="ui-togglefield-input-52f1"
                    disabled=""
                    type="checkbox"
                  />
                  <div
                    class="ui-togglefield-slider-52f1"
                  />
                  <div />
                </label>
              </div>
            </div>
            <div
              class="settings"
            >
              <p
                class="font-weight-medium"
              >
                Choose the Facebook channels you want to use to communicate with your customers:
              </p>
              <div
                class="d-md-flex"
              >
                <div
                  class="mr-5 form-group"
                >
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.messenger_enabled"
                    >
                      <input
                        class="input"
                        id="1.messenger_enabled"
                        name="1.messenger_enabled"
                        type="checkbox"
                      />
                      Enable Messenger
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.posts_enabled"
                    >
                      <input
                        class="input"
                        id="1.posts_enabled"
                        name="1.posts_enabled"
                        type="checkbox"
                      />
                      Enable Facebook posts, comments and ads comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.recommendations_enabled"
                    >
                      <input
                        class="input"
                        id="1.recommendations_enabled"
                        name="1.recommendations_enabled"
                        type="checkbox"
                      />
                      Enable Facebook recommendations
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.mentions_enabled"
                        name="1.mentions_enabled"
                        type="checkbox"
                      />
                      Enable Facebook mentions
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_comments_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_comments_enabled"
                        name="1.instagram_comments_enabled"
                        type="checkbox"
                      />
                      Enable Instagram comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_mentions_enabled"
                        name="1.instagram_mentions_enabled"
                        type="checkbox"
                      />
                      Enable Instagram mentions
                    </label>
                  </div>
                  <table>
                    <tbody>
                      <tr>
                        <td
                          class="pl-0"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="ui-label-label-3864 ui-label-isdisabled-3864 label"
                              for="1.instagram_direct_message_enabled"
                            >
                              <input
                                class="input"
                                disabled=""
                                id="1.instagram_direct_message_enabled"
                                name="1.instagram_direct_message_enabled"
                                type="checkbox"
                              />
                              <div
                                id="instagram_direct_message-1"
                                style="cursor: pointer;"
                              >
                                <span
                                  style="border-bottom: 1px dashed #D2D7DE;"
                                >
                                  Enable Instagram direct messages
                                </span>
                                <img
                                  alt="icon"
                                  class="ml-3"
                                  src="test-file-stub"
                                  style="vertical-align: text-bottom;"
                                />
                              </div>
                            </label>
                          </div>
                        </td>
                        <td
                          class="pl-0"
                        />
                      </tr>
                    </tbody>
                  </table>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_ads_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_ads_enabled"
                        name="1.instagram_ads_enabled"
                        type="checkbox"
                      />
                      Enable Instagram ads
                    </label>
                  </div>
                </div>
              </div>
              <div>
                <p
                  class="font-weight-medium"
                >
                  Import your Facebook data:
                </p>
                <div
                  class="d-md-flex"
                >
                  <div
                    class="mr-5 form-group"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="ui-label-label-3864 label"
                        for="1.import_history_enabled"
                      >
                        <input
                          class="input"
                          id="1.import_history_enabled"
                          name="1.import_history_enabled"
                          type="checkbox"
                        />
                        Import 30 days of history (posts and comments) as closed tickets
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          aria-disabled="true"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            Save changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`FacebookIntegrationSetup should render the integration as enabled with canModerate enabled because it has MODERATE_ROLE 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/facebook"
          >
            Facebook
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Facebook Pages setup
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      Facebook Pages setup
    </h1>
    <p>
      One last step: choose the pages you want to manage with Gorgias.
      <br />
      If you just wanted to re-activate your Facebook integration or update your permissions: it's done, you can leave this page.
    </p>
    <form
      class=""
    >
      <div
        class="mb-4"
      >
        <p
          class="font-weight-medium"
        >
          We found 
          1
           pages associated with your account. Please activate the pages you want to use with Gorgias:
        </p>
        <div
          class="mb-2"
        >
          <div
            class="page enabled"
          >
            <div
              class="d-flex flex-wrap flex-md-nowrap"
            >
              <div
                class="mr-auto"
              >
                <div>
                  <img
                    alt="facebook logo"
                    class="image rounded mr-3 mb-2 mb-md-0 icon"
                    src="https://gorgias.io/page-image-link.png"
                  />
                  <div
                    class="details mr-3 text-faded"
                  >
                    <h3
                      class="name mr-3"
                    >
                      My page
                    </h3>
                    <span
                      class="mr-3"
                    >
                      [
                      Moderator
                      ]
                    </span>
                    <span>
                      A page about stuff
                    </span>
                  </div>
                </div>
              </div>
              <div>
                <label
                  aria-checked="true"
                  class="ui-label-label-3864 ui-togglefield-label-52f1"
                  role="switch"
                >
                  <input
                    class="ui-togglefield-input-52f1"
                    disabled=""
                    type="checkbox"
                  />
                  <div
                    class="ui-togglefield-slider-52f1"
                  />
                  <div />
                </label>
              </div>
            </div>
            <div
              class="settings"
            >
              <p
                class="font-weight-medium"
              >
                Choose the Facebook channels you want to use to communicate with your customers:
              </p>
              <div
                class="d-md-flex"
              >
                <div
                  class="mr-5 form-group"
                >
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.messenger_enabled"
                    >
                      <input
                        class="input"
                        id="1.messenger_enabled"
                        name="1.messenger_enabled"
                        type="checkbox"
                      />
                      Enable Messenger
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.posts_enabled"
                    >
                      <input
                        class="input"
                        id="1.posts_enabled"
                        name="1.posts_enabled"
                        type="checkbox"
                      />
                      Enable Facebook posts, comments and ads comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.recommendations_enabled"
                    >
                      <input
                        class="input"
                        id="1.recommendations_enabled"
                        name="1.recommendations_enabled"
                        type="checkbox"
                      />
                      Enable Facebook recommendations
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.mentions_enabled"
                        name="1.mentions_enabled"
                        type="checkbox"
                      />
                      Enable Facebook mentions
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_comments_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_comments_enabled"
                        name="1.instagram_comments_enabled"
                        type="checkbox"
                      />
                      Enable Instagram comments
                    </label>
                  </div>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_mentions_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_mentions_enabled"
                        name="1.instagram_mentions_enabled"
                        type="checkbox"
                      />
                      Enable Instagram mentions
                    </label>
                  </div>
                  <table>
                    <tbody>
                      <tr>
                        <td
                          class="pl-0"
                        >
                          <div
                            class="mb-2"
                          >
                            <label
                              class="ui-label-label-3864 ui-label-isdisabled-3864 label"
                              for="1.instagram_direct_message_enabled"
                            >
                              <input
                                class="input"
                                disabled=""
                                id="1.instagram_direct_message_enabled"
                                name="1.instagram_direct_message_enabled"
                                type="checkbox"
                              />
                              <div
                                id="instagram_direct_message-1"
                                style="cursor: pointer;"
                              >
                                <span
                                  style="border-bottom: 1px dashed #D2D7DE;"
                                >
                                  Enable Instagram direct messages
                                </span>
                                <img
                                  alt="icon"
                                  class="ml-3"
                                  src="test-file-stub"
                                  style="vertical-align: text-bottom;"
                                />
                              </div>
                            </label>
                          </div>
                        </td>
                        <td
                          class="pl-0"
                        />
                      </tr>
                    </tbody>
                  </table>
                  <div
                    class="mb-2"
                  >
                    <label
                      class="ui-label-label-3864 label"
                      for="1.instagram_ads_enabled"
                    >
                      <input
                        class="input"
                        id="1.instagram_ads_enabled"
                        name="1.instagram_ads_enabled"
                        type="checkbox"
                      />
                      Enable Instagram ads
                    </label>
                  </div>
                </div>
              </div>
              <div>
                <p
                  class="font-weight-medium"
                >
                  Import your Facebook data:
                </p>
                <div
                  class="d-md-flex"
                >
                  <div
                    class="mr-5 form-group"
                  >
                    <div
                      class="mb-2"
                    >
                      <label
                        class="ui-label-label-3864 label"
                        for="1.import_history_enabled"
                      >
                        <input
                          class="input"
                          id="1.import_history_enabled"
                          name="1.import_history_enabled"
                          type="checkbox"
                        />
                        Import 30 days of history (posts and comments) as closed tickets
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
          type="submit"
        >
          <span
            class="ui-button-content-cef1"
          >
            Save changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`FacebookIntegrationSetup should render the integration with canModerate disabled because there is no MODERATE_ROLE 1`] = `
<div
  class="full-width"
>
  <div
    class="page-header pageHeader"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            All apps
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/facebook"
          >
            Facebook
          </a>
        </li>
        <li
          aria-current="page"
          class="active breadcrumb-item"
        >
          Facebook Pages setup
        </li>
      </ol>
    </nav>
  </div>
  <div
    class="pageContainer container-fluid"
  >
    <h1>
      Facebook Pages setup
    </h1>
    <p>
      One last step: choose the pages you want to manage with Gorgias.
      <br />
      If you just wanted to re-activate your Facebook integration or update your permissions: it's done, you can leave this page.
    </p>
    <form
      class=""
    >
      <div
        class="mb-4"
      >
        <p
          class="font-weight-medium"
        >
          We found 
          1
           pages associated with your account. Please activate the pages you want to use with Gorgias:
        </p>
        <div
          class="mb-2"
        >
          <div
            class="page"
          >
            <div
              class="d-flex flex-wrap flex-md-nowrap"
            >
              <div
                class="mr-auto"
              >
                <div>
                  <img
                    alt="facebook logo"
                    class="image rounded mr-3 mb-2 mb-md-0 icon"
                    src="https://gorgias.io/page-image-link.png"
                  />
                  <div
                    class="details mr-3 text-faded"
                  >
                    <h3
                      class="name mr-3"
                    >
                      My page
                    </h3>
                    <span
                      class="mr-3"
                    >
                      [
                      Advertiser
                      ]
                    </span>
                    <span>
                      A page about stuff
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="alert warning mt16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="icon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  In order to be able to integrate this page you need to have one of the following roles: Admin, Editor, Moderator.
                </span>
              </div>
            </div>
            <div
              class="alert warning mt16"
            >
              <div
                class="iconContainer"
              >
                <img
                  alt="icon"
                  src="test-file-stub"
                />
              </div>
              <div
                class="content"
              >
                <span
                  class="label"
                >
                  Entire page or some features are disabled because you didn't grant all the permissions we asked for when logging to Facebook. To fix this, navigate to
                   
                  <a
                    href="https://www.facebook.com/settings?tab=business_tools&ref=settings"
                  >
                    this URL
                  </a>
                  , delete the Gorgias app then try again.
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          aria-disabled="true"
          class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            Save changes
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
